welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:7: error: not found: value YELLOW
	setCouleurBrosse(YELLOW)
                         ^MethodsPicture:25: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireV()
              ^